data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_795.wast
;; 6. **Loop with Incorrectly Popped Operand Stack**:     - **Description**: Create a loop structure that improperly handles stack operands by misaligned popping and pushing during branch execution. Validate preservation of stack integrity.     - **Constraint**: Ensure stack consistency during branch execution.     - **CFG Impact**: Mismanaged operand stack results in incorrect branching in CFG, invalidating loop structures.

(assert_invalid
  (module (func $loop-incorrect-stack
    (i32.const 1)
    (loop (result i32)
      (br 0)
      (drop)
    )
  ))
  "type mismatch"
)